# docx-analyzer

./: .env.example  Makefile  README.md  pyproject.toml  sample.docx  sample2.docx  test.docx  test_commented.docx
src/docx_analyzer/: __init__.py  cli.py  llm_review.py  parser.py  web.py  writer.py
src/docx_analyzer/static/css/: style.css
src/docx_analyzer/static/js/: main.js
src/docx_analyzer/templates/: index.html
tests/: reproduce_bug.py  test_precise_comments.py
